// apiKeyServer - gRCP/protobufs API key server for Torn API
//    Copyright (C) 2021  Dave Ryack
//
//    This program is free software: you can redistribute it and/or modify
//    it under the terms of the GNU Affero General Public License as published
//    by the Free Software Foundation, either version 3 of the License, or
//    (at your option) any later version.
//
//    This program is distributed in the hope that it will be useful,
//    but WITHOUT ANY WARRANTY; without even the implied warranty of
//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//    GNU Affero General Public License for more details.
//
//    You should have received a copy of the GNU Affero General Public License
//    along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "main";
option java_outer_classname = "apiKeyServer";
option go_package = "./apikeyserver";

package apikeyserver;

service ApiKeyServer {
    rpc GetKey(RequestKey) returns (GetKeyResponse) {}
    rpc KillKey(RequestKillKey) returns (GenericKillResponse) {}
    rpc PermKillKey(PermRequestKillKey) returns (GenericKillResponse) {}
}

message RequestKey {
    string requester = 1;
    string type = 2;
}

message GetKeyResponse {
    string key = 1;
    string name = 2;
    string type = 3;
    int64 time = 4; // unixNano
    repeated KeyResponseRemaining items = 5;
}

message KeyResponseRemaining {
    string typeName = 1;
    int32 typeRemaining = 2;
}


message GenericKillResponse {
    bool result = 1;
    int64 time = 2; // unixNano
}

message RequestKillKey {
    string requester = 1;
    string key = 2;
    string name = 3;
    int64 time = 4; // unixNano
}

message PermRequestKillKey {
    string requester = 1;
    string key = 2;
    string name = 3;
    int64 time = 4; // unixNano
}